# eudev

./: configure.ac
hwdb/: 20-OUI.hwdb  20-pci-vendor-product.hwdb  20-usb-vendor-product.hwdb  Makefile.am
man/: udevadm.xml
rule_generator/: Makefile.am
rules/: Makefile.am
src/gudev/: Makefile.am
src/libudev/: Makefile.am  libudev-device.c  strv.c  strv.h  util.c  util.h
src/scsi_id/: scsi_id.c
src/udev/: Makefile.am  sd-daemon.c  sd-daemon.h  udev-builtin-uaccess.c  udev-builtin.c  udev-ctrl.c  udev-event.c  udev-rules.c  udev.h  udevadm-hwdb.c
test/: test-libudev.c
